# timini-fastapi

./: .dockerignore  .env-elope  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: code-quality.yaml  validate-pytests-on-pr.yaml
alembic/: env.py  target_metadata.py
alembic_folder/: all_models.py  env.py
alembic_folder/versions/: fab3295ff679_initial_migration.py
bantre/: __init__.py  app.py  database.py
bantre/modules/: routes.py
bantre/modules/article/: article_controller.py  article_model.py
bantre/modules/auth/: auth_controller.py  auth_model.py
bantre/system/: __init__.py  entity.py  group.py  section.py  user.py
bantre/util/: auth.py  config.py  markdown.py
tests/: conftest.py  test_article_model.py  test_auth.py  test_client.py  test_groups_model.py  test_sections_model.py  test_users_model.py
tests/dummy/: conftest.py  test_dummy.py
